ruka/pwm/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pwm
  namespace: pwm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - pwm.dev.lsst.org
    secretName: pwm-ingress-tls
  rules:
  - host: pwm.dev.lsst.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pwm
            port:
              number: 8443
